version 1.3.0+git
	* Fix bug with writing very large objects to disk

version 1.3.0 Tue Nov 1 2016 by luispedro
	* Update `shell` subcommand to IPython 5
	* Use ~/.config/jugrc as configuration file
	* Cleanup usage string
	* Use `bottle` instead of `web.py` for webstatus subcommand
	* Add `jug_execute` function
	* Add timing functionality

version 1.2.2 Sat Jun 25 2016 by luispedro
	* Fix bugs in shell subcommand and a few corner cases in encoding/decoding
	results

version 1.2.1 Mon Feb 15 2016 by luispedro
	* Changed execution loop to ensure that all tasks are checked (issue #33
	on github)
	* Fixed bug that made 'check' or 'sleep-until' slower than necessary
	* Fixed jug on Windows (which does not support fsync on directories)
	* Made Tasklets use slightly less memory

version 1.2 Wed Aug 19 2015 by luispedro
	* Use HIGHEST_PROTOCOL when pickle()ing
	* Add compress_numpy option to file_store
	* Add register_hook_once function
	* Optimize case when most (or all) tasks are already run
	* Add --short option to 'jug status' and 'jug execute'
	* Fix bug with dictionary order in kwargs (fix by Andreas Sorge)
	* Fix ipython colors (fix by Andreas Sorge)
	* Sort tasks in 'jug status'

version 1.1 Tue Mar 03 2015 by luispedro
	* Python 3 compatibility fixes
	* fsync(directory) in file backend
	* Jug hooks (still mostly undocumented, but already enabling internal code
	simplification)

version 1.0 Tue May 20 2014 by luispedro
	* Renamed release candidate to final

version 1.0rc0 Mon Apr 21 2014 by luispedro
	* Adapt status output to terminal width (by Alex Ford)
	* Add a newline at the end of lockfiles for file backend
	* Add --cache-file option to specify file for ``status --cache``

version 0.9.7 Tue Feb 18 2014 by luispedro
	* Fix use of numpy subclasses
	* Fix redis URL parsing
	* Fix ``shell`` for newer versions of IPython
	* Correctly fall back on non-sqlite ``status``
	* Allow user to call set_jugdir() inside jugfile

version 0.9.6 Tue Aug 6 2013 by luispedro